--- a/admin-obras-sociales.html
+++ b/admin-obras-sociales.html
@@ -110,7 +110,7 @@
         </nav>
 
         <!-- Contenido -->
-        <section class="col-12 col-md-9 col-lg-10 p-3">
+        <main class="col-12 col-md-9 col-lg-10 p-3">
           <h1 class="h3">Obras Sociales</h1>
 
           <form id="formObraSocial" class="row g-3">
@@ -144,7 +144,7 @@
               <tbody id="tablaObrasSociales"></tbody>
             </table>
           </div>
-        </section>
+        </main>
       </div>
     </div>
 
